# cuneus

./: .gitignore  BUILD.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  usage.md
.github/workflows/: no-default-features.yaml  release.yaml
examples/: 2dneuron.rs  audiovis.rs  blackhole.rs  blockgame.rs  buddhabrot.rs  bugberman.rs  circuits.rs  cliffordcompute.rs  cnn.rs  computecolors.rs  cuneus.rs  currents.rs  debugscreen.rs  fft.rs  fluid.rs  fluidsim.rs  gabor.rs  galaxy.rs  gaussian.rs  gaussian3d.rs  jfa.rs  kuwahara.rs  lego.rs  lich.rs  lorenz.rs  mandelbulb.rs  matrix.rs  nebula.rs  orbits.rs  particles.rs  pathtracing.rs  physarum.rs  plasma.rs  rorschach.rs  scenecolor.rs  sdvert.rs  sinh.rs  spiralchaos.rs  synth.rs  system.rs  (+6 more)
examples/shaders/: blackhole.wgsl  blockgame.wgsl  bugberman.wgsl  cliffordcompute.wgsl  cnn.wgsl  currents.wgsl  fft.wgsl  fluid.wgsl  fluidsim.wgsl  gaussian.wgsl  gaussian3d.wgsl  jfa.wgsl  kuwahara.wgsl  lich.wgsl  mandelbulb.wgsl  orbits.wgsl  rorschach.wgsl  synth.wgsl  tameimp.wgsl  tree.wgsl  veridisquo.wgsl
include/: cuneus.h  cuneus_capi.h
shaders/: blit.wgsl  satan.wgsl
src/: app.rs  atomic.rs  base_shader.rs  capi.rs  controls.rs  export.rs  font.rs  gaussian.rs  hdri.rs  hot.rs  lib.rs  ply.rs  remote.rs  renderer.rs  renderkit.rs  shader.rs  spectrum.rs  texture.rs  uniforms.rs  video.rs
src/compute/: builder.rs  core.rs  mod.rs  multipass.rs  resource.rs
src/gst/: audio.rs  offline_audio.rs  video.rs  webcam.rs
src/radix_sort/: mod.rs
