[package]
name = "cuneus"
version = "0.6.2"
edition = "2024"
authors = ["altunenes"]
description = "A WGPU-based shader development tool"
license = "MIT"
repository = "https://github.com/altunenes/cuneus"
readme = "readme.md"
keywords = ["graphics", "wgpu", "shaders", "gpu"]
categories = ["graphics", "rendering"]

[dependencies]
wgpu = "29.0.3"
winit = "0.30.13"
bytemuck = { version = "1.23.2", features = ["derive"] }
egui-wgpu = "0.34.2"
egui = "0.34.2"
egui-winit = "0.34.2"
image = { version = "0.25.10", features = ["png", "hdr","exr"] }
env_logger = "0.11.6"
pollster = "0.4.0"
rfd = "0.15.1"
notify = "8.2.0"
gstreamer = { version = "0.25.2", optional = true }
gstreamer-video = { version = "0.25.2", optional = true }
gstreamer-app = { version = "0.25.2", optional = true }
gstreamer-pbutils = { version = "0.25.2", optional = true }
anyhow = "1.0.96"
log = "0.4.25"
ply-rs-bw = "4.0"

[features]
default = ["media"]
media = ["gstreamer", "gstreamer-video", "gstreamer-app", "gstreamer-pbutils"]

[[example]]
name = "audiovis"
required-features = ["media"]

[[example]]
name = "blockgame"
required-features = ["media"]

[[example]]
name = "bugberman"
required-features = ["media"]

[[example]]
name = "computecolors"
required-features = ["media"]

[[example]]
name = "debugscreen"
required-features = ["media"]

[[example]]
name = "fft"
required-features = ["media"]

[[example]]
name = "fluid"
required-features = ["media"]

[[example]]
name = "gaussian"
required-features = ["media"]

[[example]]
name = "kuwahara"
required-features = ["media"]

[[example]]
name = "lego"
required-features = ["media"]

[[example]]
name = "pathtracing"
required-features = ["media"]

[[example]]
name = "synth"
required-features = ["media"]

[[example]]
name = "tameimp"
required-features = ["media"]

[[example]]
name = "veridisquo"
required-features = ["media"]

[[example]]
name = "voronoi"
required-features = ["media"]

[dev-dependencies]
